syntax = "proto3";

package com.mediaupload;

option java_multiple_files = true;
option java_package = "com.mediaupload.proto";
option java_outer_classname = "MediaUploadProto";

// Service definition
service MediaUploadService {
  // Upload video file
  rpc UploadVideo(stream VideoChunk) returns (UploadResponse);
  
  // Check if queue is full
  rpc CheckQueueStatus(QueueStatusRequest) returns (QueueStatusResponse);
}

// Video chunk message
message VideoChunk {
  string filename = 1;
  bytes data = 2;
  int32 chunk_index = 3;
  bool is_last_chunk = 4;
  string hash = 5; // For duplicate detection
}

// Upload response
message UploadResponse {
  bool success = 1;
  string message = 2;
  string file_id = 3;
  bool queue_full = 4;
  bool is_duplicate = 5;
}

// Queue status request
message QueueStatusRequest {
}

// Queue status response
message QueueStatusResponse {
  bool queue_full = 1;
  int32 queue_size = 2;
  int32 max_queue_size = 3;
}

